# CometCIDS

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: cmake_linux.yml  msbuild-win.yml
comet-ms/: CMakeLists.txt  Comet.cpp  Comet.rc  Comet.sln  Comet.vcxproj  Comet.vcxproj.filters
comet-ms/CometSearch/: CometData.h  CometDataInternal.h  CometDecoys.h  CometInterfaces.cpp  CometInterfaces.h  CometMassSpecUtils.cpp  CometMassSpecUtils.h  CometPostAnalysis.cpp  CometPostAnalysis.h  CometPreprocess.cpp  CometPreprocess.h  CometSearch.cpp  CometSearch.h  CometSearch.vcxproj  CometSearchManager.cpp  CometSearchManager.h  CometWriteOut.cpp  CometWritePepXML.cpp  CometWriteSqt.cpp  CometWriteTxt.cpp  Common.h  ThreadPool.h
comet-ms/CometSearch/PeptideFragmentation/: FragmentCalculator.cpp  FragmentCalculator.h
comet-ms/CometSearch/PeptideFragmentation/MakeMS2/: PeptideIsotopeDist.cpp  PeptideIsotopeDist.h  SpectrumGenerator.cpp  SpectrumGenerator.h  dist.cpp  dist.h  fft.cpp  fft.h  hyper.cpp  hyper.h  mathlib.cpp  mathlib.h  peptidemass.cpp  peptidemass.h
comet-ms/CometSearch/PeptideFragmentation/MakeMS2/FragmentModels/: ChargeConditionalFragmentModel.h  ChargeIsotopeModel.cpp  ChargeIsotopeModel.h  ChargeModel.cpp  ChargeModel.h  FragmentIon.h  FragmentModel.cpp  FragmentModel.h  FragmentModelData.cpp  FragmentModelData.h  FragmentModelFactory.cpp  FragmentModelFactory.h  FragmentModelOptions.cpp  FragmentModelOptions.h  HyperFragLookupTable.cpp  HyperFragModel.cpp  HyperFragModel.h  IsotopeModel.cpp  IsotopeModel.h  MobileProtonIsotopeModel.cpp  MobileProtonIsotopeModel.h  MobileProtonModel.cpp  MobileProtonModel.h  PlainModel.cpp  PlainModel.h  chargeconditionalfragmentmodel.cpp
comet-ms/CometSearch/PeptideFragmentation/Utils/: HyperGeometric.cpp  HyperGeometric.h
comet-ms/CometUI/: About Dlg.Designer.cs  About Dlg.cs  About Dlg.resx  CometParam.cs  CometParamsReader.cs  CometParamsWriter.cs  CometUI.Designer.cs  CometUI.cs  CometUI.csproj  CometUI.resx  MassSpecUtils.cs  Peak.cs  Program.cs  app.config  packages.config
comet-ms/CometUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  RunSearchSettings.Designer.cs  RunSearchSettings.settings  SearchSettings.Designer.cs  SearchSettings.settings  Settings.Designer.cs  ViewResultsSettings.Designer.cs  ViewResultsSettings.settings
comet-ms/CometUI/Search/: CometSearch.cs  ExportSearchParamsDlg.cs  ImportSearchParamsDlg.Designer.cs  ImportSearchParamsDlg.cs  ImportSearchParamsDlg.resx  RunSearchBackgroundWorker.cs  RunSearchDlg.Designer.cs  RunSearchDlg.cs  RunSearchProgressDlg.Designer.cs  RunSearchProgressDlg.cs
comet-ms/CometUI/Search/SearchSettings/: EnzymeInfoDlg.Designer.cs  EnzymeInfoDlg.cs  EnzymeInfoDlg.resx  EnzymeSettingsControl.Designer.cs  EnzymeSettingsControl.cs  InputSettingsControl.Designer.cs  InputSettingsControl.cs  InputSettingsControl.resx  MassSettingsControl.Designer.cs  MassSettingsControl.cs  MiscSettingsControl.Designer.cs  MiscSettingsControl.cs  MiscSettingsControl.resx  OutputSettingsControl.Designer.cs  OutputSettingsControl.cs  OutputSettingsControl.resx  SearchSettingsDlg.Designer.cs  SearchSettingsDlg.cs  SearchSettingsDlg.resx  StaticModSettingsControl.Designer.cs  StaticModSettingsControl.cs  StaticModSettingsControl.resx  VarModInfoDlg.Designer.cs  VarModInfoDlg.cs  VarModInfoDlg.resx  VarModSettingsControl.Designer.cs  VarModSettingsControl.cs
comet-ms/CometUI/SharedUI/: ExportFileDlg.Designer.cs  ExportFileDlg.cs  ExportFileDlg.resx  FindFileDlg.Designer.cs  FindFileDlg.cs  FindFileDlg.resx  NumericTextBox.cs  ProgressDlg.Designer.cs  ProgressDlg.cs  ProgressDlg.resx
comet-ms/CometUI/ViewResults/: ExportSearchResults.cs  FDRDlg.Designer.cs  FDRDlg.cs  PepXMLReader.cs  PeptideFragmentCalculator.cs  ProteinDBReader.cs  SearchResult.cs  ViewResultsBackgroundWorker.cs  ViewResultsDisplayOptionsControl.Designer.cs  ViewResultsDisplayOptionsControl.cs  ViewResultsOtherActionsControl.Designer.cs  ViewResultsOtherActionsControl.cs  ViewResultsPickColumnsControl.Designer.cs  ViewResultsPickColumnsControl.cs  ViewResultsProgressDlg.Designer.cs  ViewResultsProgressDlg.cs  ViewResultsSummaryOptionsControl.Designer.cs  ViewResultsSummaryOptionsControl.cs  ViewResultsSummaryOptionsControl.resx  ViewSearchResultsControl.Designer.cs  ViewSearchResultsControl.cs  ViewSearchResultsControl.resx
comet-ms/CometWrapper/: AssemblyInfo.cpp  CometDataWrapper.h  CometWrapper.cpp  CometWrapper.h  CometWrapper.vcxproj  MSFileReaderWrapper.h
comet-ms/MSToolkit/: MSToolkitLite.vcxproj  MSToolkitLite.vcxproj.filters
comet-ms/MSToolkit/include/: MSReader.h
comet-ms/MSToolkit/src/MSToolkit/: MSReader.cpp  RAWReader.cpp
comet-ms/MSToolkit/src/mzParser/: RAMPface.cpp  mzMLReader.cpp
comet-ms/RealtimeSearch/: RealtimeSearch.csproj  Search.cs
comet-ms/RealtimeSearch/Properties/: AssemblyInfo.cs  Resources.Designer.cs
comet-ms/data/: CMakeLists.txt  Resources.h.in
examples/: comet_15N_example.params  comet_D2O_example.params  comet_default.params
tests/: CMakeLists.txt  benchmark.h  comet_test_exampleTest.cpp  main.cpp  testing.cpp  testing.h
tests/data/: expected.tsv  mobile_proton1.tsv  mobile_proton2.tsv  mobile_proton3.tsv  mobile_proton_isotope1.tsv
